# coursework3

./: .gitignore  database.ini  db_manager.py  hh_api.py  main.py  pyproject.toml
