[tool.poetry]
name = "pythonproject7"
version = "0.1.0"
description = ""
authors = ["another <kirill.grigk37@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
company = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
